# pi-light

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  default_rules.json  pyproject.toml  setup.cfg
app/: main.py
app/api/routes/: api.py  html.py
app/core/: config.py  events.py  light.py  settings.py
app/services/: simple_time.py
app/services/pi_light/: board.py  color.py  day.py  fake_board.py  light.py  mode.py  pi_light.py  rule.py  rule_manager.py  state.py
app/templates/: light.html
dotenv/: dev.env  test.env
tests/: conftest.py
tests/test_services/: test_pi_light.py  test_pi_light_color.py  test_pi_light_rule.py  test_simple_time.py
tests/test_services/pi_light/: test_color.py  test_light.py  test_rule.py  test_rule_manager.py
